# xarf-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  ARCHITECTURE_DELIVERABLES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PIPELINE_SUMMARY.md  README.md  RELEASE_NOTES_4.0.0.md  SECURITY.md  pyproject.toml  renovate.json
.claude/: CONTEXT.md  TODO.md
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: QUICK_START.md  WORKFLOWS_SUMMARY.md  dependabot.yml  trivy.yaml
.github/workflows/: README.md  ci.yml  codeql.yml  continuous-integration.yml  dependency-review.yml  publish-pypi.yml  publish.yml  quality-checks.yml  security-scan.yml  test-suite.yml  test.yml
.swarm/: memory.db
docs/: API_SURFACE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_SUMMARY.md  CLASS_HIERARCHY.md  COMPATIBILITY.md  COMPATIBILITY_SUMMARY.md  DEPRECATED.md  DEVELOPMENT.md  IDE-SETUP.md  INDEX.md  MIGRATION_GUIDE.md  MIGRATION_V3_TO_V4.md  PRE_COMMIT.md  QUICK_START.md  ci-cd-pipeline-design.md  generator_example.py  generator_usage.md  migration-guide.md
samples/invalid/business_rule_violations/: messaging_missing_protocol.json
samples/invalid/malformed_data/: invalid_json.json
samples/invalid/schema_violations/: invalid_class.json  missing_xarf_version.json
scripts/: fetch_schemas.py  run-precommit.sh
test-definitions/: test-cases.json
tests/: __init__.py  conftest.py  test_exceptions.py  test_generator.py  test_generator_v2.py  test_models.py  test_parse.py  test_parser.py  test_parser_v2.py  test_schema_registry.py  test_schema_validator.py  test_security.py  test_v3_compat.py  test_v3_compatibility.py  test_validation.py  test_validator.py
tests/shared/: README.md
tests/shared/samples/invalid/business_rule_violations/: messaging_missing_protocol.json
tests/shared/samples/invalid/malformed_data/: invalid_json.json
tests/shared/samples/invalid/missing_fields/: missing_reporter.json
tests/shared/samples/invalid/schema_violations/: invalid_class.json  missing_xarf_version.json
tests/shared/samples/valid/v3/: botnet_v3_sample.json  ddos_v3_sample.json  phishing_v3_sample.json  spam_v3_sample.json
tests/shared/samples/valid/v4/connection/: auth_failure_sample.json  ddos_certin_sample.json  ddos_sample.json  ip_spoof_sample.json  login_attack_sample.json  port_scan_sample.json
tests/shared/samples/valid/v4/content/: defacement_sample.json  fraud_sample.json  malware_distribution_sample.json  phishing_site_lentho_sample.json  phishing_ybrand_sample.json  spamvertised_sample.json  web_hack_sample.json
tests/shared/samples/valid/v4/copyright/: dmca_tvb_sample.json  trademark_sample.json
tests/shared/samples/valid/v4/examples/: internal_metadata_receiver_example.json  internal_metadata_sender_example.json  internal_metadata_transmitted_example.json  reporter_sender_different.json  reporter_sender_same.json
tests/shared/samples/valid/v4/infrastructure/: bot_certbund_sample.json  compromised_account_sample.json  compromised_microsoft_exchange_sample.json  compromised_server_sample.json  compromised_website_sample.json  cve_infrastructure_sample.json
tests/shared/samples/valid/v4/messaging/: spam_spamcop_sample.json  spam_spamtrap_phishing_sample.json  spam_user_complaint_sample.json  spam_v3_converted_sample.json  whatsapp_social_engineering_sample.json
tests/shared/samples/valid/v4/reputation/: blocklist_aggregated_sample.json  ip_reclamation_sample.json  trap_sample.json
tests/shared/samples/valid/v4/vulnerability/: cve_sample.json  malicious_activity_sample.json  open_service_shadowserver_sample.json  outdated_dnssec_sample.json  ssl_freak_sample.json  ssl_poodle_sample.json
tests/shared/test-definitions/: test-cases.json
xarf/: __init__.py  _version.py  exceptions.py  generator.py  models.py  parser.py  schema_registry.py  schema_utils.py  schema_validator.py  types_connection.py  types_content.py  types_copyright.py  types_infrastructure.py  types_messaging.py  types_reputation.py  types_vulnerability.py  v3_compat.py  validator.py
xarf/schemas/: .version
