[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xarf"
version = "4.0.0a1"
description = "XARF v4 Python Parser - Parse and validate XARF v4 abuse reports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "XARF Project", email = "contact@xarf.org"}
]
maintainers = [
    {name = "XARF Project", email = "contact@xarf.org"}
]
keywords = ["xarf", "abuse", "security", "parser", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Monitoring"
]
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.0.0",
    "python-dateutil>=2.8.0",
    "email-validator>=2.0.0",
    "pydantic>=2.0.0"
]

[project.urls]
"Homepage" = "https://xarf.org"
"Documentation" = "https://github.com/xarf/xarf-parser-python"
"Repository" = "https://github.com/xarf/xarf-parser-python"
"Bug Reports" = "https://github.com/xarf/xarf-parser-python/issues"
"Specification" = "https://github.com/xarf/xarf-spec"
"Changelog" = "https://github.com/xarf/xarf-parser-python/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
    "pydocstyle[toml]>=6.0.0",
    "radon>=6.0.0",
    "pip-audit>=2.0.0",
    "pylint>=2.0.0",
    "vulture>=2.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xarf*"]

[tool.setuptools.package-data]
xarf = ["schemas/**/*.json"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=xarf --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["xarf"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "C901"]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_).*\\.py"
match_dir = "^(?!tests|venv|\\.venv|build|dist).*"

[tool.pylint.master]
ignore = ["CVS"]
ignore-patterns = [".*_test\\.py"]
jobs = 1

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "bare-except",
    "locally-disabled",
    "broad-except",
    "unused-argument",
    "no-member"
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "
indent-after-paren = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ip"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-attributes = 10
min-public-methods = 1
max-public-methods = 20

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "S101",   # assert used (OK in tests)
    "S104",   # hardcoded bind all interfaces (OK for 0.0.0.0 defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests

[tool.radon]
exclude = ["tests/*", "venv/*", ".venv/*", "build/*", "dist/*"]
show_complexity = true
show_mi = true
