[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xarf"
version = "1.0.0"
description = "Python library for parsing, generating, and validating XARF v4 abuse reports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "XARF Project", email = "admin@abusix.com"}
]
maintainers = [
    {name = "XARF Project", email = "admin@abusix.com"}
]
keywords = ["xarf", "abuse", "security", "parser", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Monitoring"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.18",
    "referencing>=0.28",
    "email-validator>=2.0.0",
]

[project.urls]
"Homepage" = "https://xarf.org"
"Documentation" = "https://xarf.org"
"Repository" = "https://github.com/xarf/xarf-python"
"Bug Reports" = "https://github.com/xarf/xarf-python/issues"
"Specification" = "https://github.com/xarf/xarf-spec"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.8",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "pre-commit",
    "build",
    "twine",
    "types-jsonschema",
    "tomli>=2.0; python_version < '3.11'",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xarf*"]

[tool.setuptools.package-data]
xarf = ["schemas/**/*.json", "schemas/.version"]

[tool.xarf]
spec_version = "v4.2.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "PLC", "PLE"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --cov=xarf --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["xarf"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]
